force-app/main/default/objects/Estimate_Line_Items__c/Estimate_Line_Items__c.object-meta.xml
<CustomObject>
    <label>Estimate Line Items</label>
    <nameField>
        <label>Estimate Line Items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estimate Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>