force-app/main/default/objects/Estimate_Line_Items__c/fields/Estimate__c.field-meta.xml
<CustomField>
    <fullName>Estimate__c</fullName>
    <label>Estimate</label>
    <referenceTo>Estimate__c</referenceTo>
    <relationshipLabel>Estimate Line Items</relationshipLabel>
    <relationshipName>Estimate_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>