force-app/main/default/objects/Estimate_Line_Items__c/fields/Work_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order Line Item</label>
    <referenceTo>WorkOrderLineItem</referenceTo>
    <relationshipLabel>Estimate Line Items</relationshipLabel>
    <relationshipName>Estimate_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>